GNOME Bugzilla – Bug 696813
clutter_actor_set_child_above/below_sibling leaking a reference on the actor
Last modified: 2013-06-12 09:31:04 UTC
Created attachment 240084 [details] [review] Unref the extra ref we took clutter_actor_set_child_above/below_sibling take an extra reference on the actor so it can be removed and re-added from the container without getting deleted. But then the extra ref is never released, which means that actors end up getting leaked. Patch unrefs after adding the actor back into the container
Created attachment 240085 [details] [review] Also fix clutter_actor_set_child_at_index I did more checking and the same bug is in clutter_actor_set_child_at_index too
bump
ouch, thanks for you patches, and sorry for taking this long. I've pushed your patches to clutter-1.16 and clutter-1.14, alongside with a bunch of checks in the conformance test suite to ensure we catch reference leaks like these in the future. again, thanks!