clutter_actor_set_child_above/below_sibling leaking a reference

https://bugzilla.gnome.org/show_bug.cgi?id=696813